[tool.poetry]
name = "rankkeeper"
version = "0.1.0"
description = ""
authors = ["kousakirai <kouki.muro2850@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [
]

[tool.poetry.dependencies]
python = "^3.10"
discord-py = {extras = ["voice"], version = "^2.3.2"}
python-dotenv = "^1.0.1"
jishaku = "^2.5.2"
pynacl = "^1.5.0"
aiofiles = "^23.2.1"
sqlalchemy = "^2.0.29"
aiomysql = {git = "https://github.com/kousakirai/aiomysql.git"}
google-api-python-client = "^2.127.0"
cryptography = "^42.0.5"
youtube-dl = {git = "https://github.com/kousakirai/youtube-dl.git"}
wavelink = "^3.3.0"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
